--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-date-range": "^1.4.8",
     "@types/react-datepicker": "^4.19.3",
+    "chart.js": "^4.4.0",
+    "date-fns": "^2.30.0",
+    "moment": "^2.29.4",
+    "moment-range": "^4.0.2",
     "next": "14.0.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18",
+    "react-moment": "^1.1.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "typescript": "^5"
